Fix gap btwn toolbar and searchbar

--- a/docs/styles/toolbar.css
+++ b/docs/styles/toolbar.css
@@ -359,7 +359,7 @@
   font-size: 24px;
   vertical-align: middle;
   position: sticky;
-  top: 37px;
+  top: 35px;
   width: 100%;
   line-height: 30px;
   height: 37px;
